rename boarder to clockBorder & remove unused background color option

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
     <!-- The clock card template for Class clocks -->
     <script type="text/html" id="clockCards">
       <!-- box that the entire clock sits in -->
-      <div class="mb-2 {{boardr}} {{bgcolor}}" style="width: 100%">
+      <div class="mb-2 {{clockBorder}} bg-light" style="width: 100%">
         
         <div class="form-group row"> 
           <label for="{{searchBoxID}}" class="sr-only" >Type 3 characters and look for dropdown</label>
