Left justified time with time description

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         
         <div style="color: red" class="rounded col" id="{{timeDescriptionID}}">{{timeDescription}}
         </div>
-        <div class="ml-5 mb-3 text-dark" id="{{timeID}}"></div> <!-- placeholder div for the actual time  -->
+        <div class="col mb-3 text-dark" id="{{timeID}}"></div> <!-- placeholder div for the actual time  -->
       </div> 
     </script>
     <!-- END NEW PROBABLY WRONG STUFF -->
