--- a/index.html
+++ b/index.html
@@ -189,6 +189,14 @@
         <!-- end clock divs -->
       </div><!-- end container for timeshifter clocks --> 
 
+      <!-- Button to add city (clocks) -->
+      <div class="container">
+        <div class="row pr-1 pl-1">
+            <button class = "col-3 btn btn-primary copyBtn" id="addClock">Add another city</button>
+        </div>
+      </div>
+      <!-- Close container for Button --> 
+
       <div class="container mt-2">  <!-- open container to hold range sliders -->
         <div class="row">
             <form class="col col-md-6 ">
