--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
     <!-- Include Mustache.js from CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js" integrity="sha256-srhz/t0GOrmVGZryG24MVDyFDYZpvUH2+dnJ8FbpGi0=" crossorigin="anonymous"></script>
 
-    <!-- Bootstrap 4 Autocomplete  Plugin-->
+    <!-- Bootstrap 4 Autocomplete  Plugin https://github.com/Honatas/bootstrap-4-autocomplete -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-4-autocomplete/dist/bootstrap-4-autocomplete.min.js" crossorigin="anonymous"></script>
 
     <!-- Local Bootstrap 4 Autocomplete Plugin -->
