switched to Honatas original library for autocomplete
trying to grep to find index for searchbox

--- a/index.html
+++ b/index.html
@@ -271,10 +271,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js" integrity="sha256-srhz/t0GOrmVGZryG24MVDyFDYZpvUH2+dnJ8FbpGi0=" crossorigin="anonymous"></script>
 
     <!-- Bootstrap 4 Autocomplete  Plugin https://github.com/Honatas/bootstrap-4-autocomplete -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap-4-autocomplete/dist/bootstrap-4-autocomplete.min.js" crossorigin="anonymous"></script> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-4-autocomplete/dist/bootstrap-4-autocomplete.min.js" crossorigin="anonymous"></script>
 
     <!-- Local Bootstrap 4 Autocomplete Plugin -->
-    <script src="./bootstrap-4-autocomplete.js" crossorigin="anonymous"></script>
+    <!-- <script src="./bootstrap-4-autocomplete.js" crossorigin="anonymous"></script> -->
 
     <!-- load moment.js with locales -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js" integrity="sha256-AdQN98MVZs44Eq2yTwtoKufhnU+uZ7v2kXnD5vqzZVo=" crossorigin="anonymous"></script>
