Labeled Help Button
for screen readers added aria-label

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
               <div class="form-group">
                 <div >
                   <label class="mr2" for="changeHrs">Drag to Shift Time (hrs)</label>
-                  <button class="btn" type="button" data-toggle="collapse" data-target="#explainSlider" aria-expanded="false" aria-controls="explainSlider"><i class="fas fa-question-circle ">  Help</i></button>
+                  <button class="btn" type="button" data-toggle="collapse" data-target="#explainSlider" aria-expanded="false" aria-controls="explainSlider" aria-label="Help"><i class="fas fa-question-circle ">  Help</i></button>
                   <div class="collapse" id="explainSlider">
                     <div class="card card-body">
                       As you start to slide, clocks will round down to nearest hour and shift forward from there.
