onblur works on fake input box

--- a/index.html
+++ b/index.html
@@ -226,6 +226,10 @@
         <div class="small" name="homage">Released as an open source project at <a href="https://github.com/NosillaCast/time-shifter-clock">github.com/NosillaCast/time-shifter-clock</a></div>
       </div>
 
+      <div class="">
+        <input type="text" id="fake" placeholder="this is fake">
+      </div>
+
     </main>
     
     <!-- The clock card template for Class clocks -->
