fixed comment format from JavaScript to html

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       <!-- Button to add city (clocks) -->
       <div class="container">
         <div class="row pr-1 pl-1">
-            // NOTE: Why is the class copyBtn? doesn't hurt anything but weird.
+            <!-- NOTE: Why is the class copyBtn? doesn't hurt anything but weird. -->
             <button class = "col-6 btn btn-primary copyBtn" id="addClock">Add another city</button>
         </div>
       </div>
