--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         <div class="col mb-3 text-dark" id="{{timeID}}"></div> <!-- placeholder div for the actual time  -->
       </div> 
     </script>
-    <!-- END NEW PROBABLY WRONG STUFF -->
+    <!-- END NEW PROBABLY WRONG STUFF (comment left in because it makes me giggle)-->
 
     <!-- Include jQuery, Popper, then Bootstrap - IN THIS ORDER -->
     <script src="https://code.jquery.com/jquery-3.4.0.min.js" integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=" crossorigin="anonymous"></script>
