Added V2 badge to title

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </div> <!-- open/close col-2 for logo -->
             
             <div class="col col-md-8"><!-- open col-6 for title and explanation button -->
-              <h1 class="row h3 d-md-inline">Time Shifter Clock</h1> <!-- row for Heading -->
+              <h1 class="row h3 d-md-inline">Time Shifter Clock <span class="badge badge-primary">V2</span></h1> <!-- row for Heading -->
 
               <div class="row"><!-- row for current local time -->
                 <!-- Placeholder for current local time -->
