added instructions to add to home screen

--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
                 <li>Click the Copy URL to send times button, and then paste it in a message to your participants. </li>
               </ol>
               <p>They will see the date/time exactly as you've sent it. If they don't like the time chosen, they can shift time themselves and send it back to you as an alternate proposal. </p>
+              <p>If you find Time Shifter Clock useful, add it to your mobile device's home screen and you'll get a progressive web app with a pretty icon and no URL bar.</p>
             </div>
           </div>
         </div>
