--- a/index.html
+++ b/index.html
@@ -214,37 +214,23 @@
       </div>
       <!-- Close container for Button -->
   
-       <!-- Open 2 containers for Buy Me a Coffee -->
-      <div class="container d-flex vertical-align-middle mt-2 small">
-        <!-- col for useful -->
-        <div class="col-3 text-center">
-          <div class="row">
-            <p class="">
-                Find this web app useful?
-                </p>
-          </div>
-        </div>
-        <!-- col for Buy Me a Coffee button -->
-        <div class="col-4" text-center>
-          <a href="https://podfeet.com/donate" target="_blank" class="btn btn-primary" aria-labelledby="Takes you to a site to let you donate with a credit card or Apple Pay in incrments of $5 so like the price of a cup of coffee">
-            <span class="me-2">☕</span>
-            <span>Buy me a coffee</span>
-          </a>
-        </div>
-      </div>
-
-      <!-- </div> -->
-      <!-- <div class="container d-flex">
-        <div class="col-6">
-          <div class="row">
-            <a href="https://podfeet.com/donate" target="_blank" class="btn btn-light" aria-labelledby="Takes you to a site to let you donate with a credit card or Apple Pay in incrments of $5 so like the price of a cup of coffee">
+      <!-- Open container for Buy Me a Coffee -->
+      <div class="container mt-5">
+        <div class="row justify-content-end">
+          <div class="col-4">
+            <div class="text-center">
+              <div class="mb-2">
+                If you find this web app useful, please make a small donation.
+              </div>
+              <a href="https://podfeet.com/donate" target="_blank" class="btn btn-primary" aria-labelledby="Takes you to a site to let you donate with a credit card or Apple Pay in increments of $5 so like the price of a cup of coffee">
                 <span class="me-2">☕</span>
                 <span>Buy me a coffee</span>
               </a>
+            </div>
           </div>
-        </div> 
-      </div> -->
-    <!-- Close containers for Buy Me a Coffee -->
+        </div>
+      </div>
+      <!-- Close container for Buy Me a Coffee -->
     
     <!-- Credits -->
     <div class="container mt-2">
