Feat: improved layout coffee & credits

--- a/index.html
+++ b/index.html
@@ -214,11 +214,11 @@
       </div>
       <!-- Close container for Button -->
   
-      <!-- Open container for Buy Me a Coffee -->
+      <!-- Open container for Buy Me a Coffee & Credits -->
       <div class="container mt-5">
-        <div class="row justify-content-end">
-          <div class="col-4">
-            <div class="text-center">
+        <div class="row justify-content-center">
+          <div class="col-8">
+            <div class="text-center"> <!-- Center text & Buy Me a Coffee button -->
               <div class="mb-2">
                 If you find this web app useful, please make a small donation.
               </div>
@@ -226,17 +226,14 @@
                 <span class="me-2">☕</span>
                 <span>Buy me a coffee</span>
               </a>
+              <!-- Credits -->
+              <div class="small" name="homage">Released as an open source project at</br> <a href="https://github.com/NosillaCast/time-shifter-clock">github.com/NosillaCast/time-shifter-clock</a>
+              </div> <!-- close credits -->
             </div>
           </div>
         </div>
       </div>
       <!-- Close container for Buy Me a Coffee -->
-    
-    <!-- Credits -->
-    <div class="container mt-2">
-      <div class="small" name="homage">Released as an open source project at <a href="https://github.com/NosillaCast/time-shifter-clock">github.com/NosillaCast/time-shifter-clock</a>
-      </div>
-    </div>
 
     </main>
     
